# NADSTRESNICA

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
nadstresnica/cookbook/: extract_text_pdf.ipynb  izdvojeni_tekst.txt  izdvojeni_tekst1.txt  preuzmi_sva_dokumneta.ipynb  preuzmi_sve.py
nadstresnica/test/: test_preuzetih_dokumenata.py
nadstresnica/utils/: extract_msg_files.py
